Closed
Bug 399350
Opened 18 years ago
Closed 18 years ago
Clicking menu doesn't work after selecting a command from its popup
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: martijn.martijn, Assigned: enndeakin)
References
Details
(Keywords: regression)
Attachments
(2 files, 1 obsolete file)
|
1.59 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
beltzner
:
approvalM9+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
|
2.11 KB,
patch
|
asaf
:
review+
beltzner
:
approvalM9+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
To reproduce the bug:
- Click File->Save Page As...
- Click Cancel in that dialog (or ok, whatever you want)
- Click on File again
Expected result:
File menu should open
Actual result:
File menu doesn't open
The file menu does open if you click again.
This regressed since yesterday, so I think a regression from bug 397012.
| Assignee | ||
Comment 1•18 years ago
|
||
Martijn, I haven't tested this, could you see if this fixes the problem?
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
| Reporter | ||
Comment 2•18 years ago
|
||
I just tried it, it doesn't seem to fix the problem.
| Assignee | ||
Comment 3•18 years ago
|
||
OK, try this patch instead.
Attachment #284368 -
Attachment is obsolete: true
| Assignee | ||
Comment 4•18 years ago
|
||
The bug title is a bit misleading, this issue actually occurs when selecting any menu command.
Summary: Clicking menu doesn't work after modal dialog was open → Clicking menu doesn't work after selecting a command from its popup
| Reporter | ||
Comment 5•18 years ago
|
||
Yeah, that patch works fine.
Indeed, I didn't really play around a lot before, before filing the bug.
| Assignee | ||
Comment 6•18 years ago
|
||
Comment on attachment 284499 [details] [diff] [review]
try this one
This patch resets the recently closed menu state when selecting a command from a menu.
Attachment #284499 -
Flags: superreview?(bzbarsky)
Attachment #284499 -
Flags: review?(bzbarsky)
Comment 7•18 years ago
|
||
Comment on attachment 284499 [details] [diff] [review]
try this one
r+sr=bzbarsky.
Can we add a test for this?
Attachment #284499 -
Flags: superreview?(bzbarsky)
Attachment #284499 -
Flags: superreview+
Attachment #284499 -
Flags: review?(bzbarsky)
Attachment #284499 -
Flags: review+
Updated•18 years ago
|
OS: Windows XP → All
Comment 9•18 years ago
|
||
I can reproduce this behaviour in a new profile by selecting the File - Work Offline menu. After going offline the file menu will not open on first click. Same if you select to go back online and immediately try to click the file menu again. No modal dialogs are present.
| Assignee | ||
Comment 10•18 years ago
|
||
The test adds a check to ensure that after a menuitem from the edit menu is selected, clicking the edit menu label again still opens the menu.
Attachment #284931 -
Flags: review?(mano)
Comment 11•18 years ago
|
||
Comment on attachment 284931 [details] [diff] [review]
add a check within the menubar tests for this
r=mano
Attachment #284931 -
Flags: review?(mano) → review+
| Assignee | ||
Updated•18 years ago
|
Attachment #284499 -
Flags: approval1.9?
| Assignee | ||
Updated•18 years ago
|
Attachment #284931 -
Flags: approval1.9?
Comment 13•18 years ago
|
||
Updated•18 years ago
|
Flags: blocking1.9?
Flags: blocking1.9? → blocking1.9+
Comment 14•18 years ago
|
||
Comment on attachment 284931 [details] [diff] [review]
add a check within the menubar tests for this
a=endgame drivers for M9
Attachment #284931 -
Flags: approvalM9+
Attachment #284931 -
Flags: approval1.9?
Attachment #284931 -
Flags: approval1.9+
Comment 15•18 years ago
|
||
Comment on attachment 284499 [details] [diff] [review]
try this one
a=endgame drivers for M9
Attachment #284499 -
Flags: approvalM9+
Attachment #284499 -
Flags: approval1.9?
Attachment #284499 -
Flags: approval1.9+
| Assignee | ||
Comment 16•18 years ago
|
||
Checked in both patches
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Comment 17•18 years ago
|
||
I've found one more case where the menu fails to open, even after this patch. Should I file a new bug?
The case is: click menu bar to open any menu, for example, Bookmarks. Click the window's title bar, which will close the menu. Now click the same menu (Bookmarks) again. The first click fails, but the second one works. This is on "Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a9pre) Gecko/2007102904 Minefield/3.0a9pre"
| Reporter | ||
Comment 18•18 years ago
|
||
Warner, yes, please file a new bug for that.
| Reporter | ||
Comment 19•18 years ago
|
||
Warner filed bug 401627 for it.
| Assignee | ||
Updated•17 years ago
|
Flags: in-testsuite+
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: xptoolkit.menus → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•