Bug 399350, clicking menu doesn't work after selecting a command, r=bz,mano,sr=bz,a=beltzner